Closed Bug 423960 Opened 18 years ago Closed 18 years ago

regression: disabling history remembers visits

Categories

(Firefox :: Bookmarks & History, defect, P1)

defect

Tracking

()

VERIFIED FIXED
Firefox 3 beta5

People

(Reporter: mak, Assigned: mak)

References

Details

(Keywords: privacy, regression)

Attachments

(1 file)

regression from bug 419170 if a user disable the remember my history for at least X days we are setting history_expire_days= 0 but history_expire_days_min is 90 we are checking that history_expire_days is not less than history_expire_days_min to avoid deleting wrong visits, but we are not checking the special case in which it is 0. bad privacy regression, require P1 blocker for beta5
Flags: blocking-firefox3?
Assignee: nobody → mak77
Blocks: 419170
Priority: -- → P1
Status: NEW → ASSIGNED
Target Milestone: --- → Firefox 3 beta5
Flags: blocking-firefox3? → blocking-firefox3+
Attached patch patchSplinter Review
added a check, plus updated unit tests to avoid the same error in future
Attachment #310601 - Flags: review?(dietrich)
Comment on attachment 310601 [details] [diff] [review] patch r=me, thanks for quick turnaround.
Attachment #310601 - Flags: review?(dietrich) → review+
Checking in toolkit/components/places/src/nsNavHistory.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp new revision: 1.278; previous revision: 1.277 done Checking in toolkit/components/places/tests/unit/test_expiration.js; /cvsroot/mozilla/toolkit/components/places/tests/unit/test_expiration.js,v <-- test_expiration.js new revision: 1.18; previous revision: 1.17 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
20080319_1726_firefox-3.0b5pre.en-US.win32.zip fixed, thank you.
verified with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008032106 Minefield/3.0b5pre and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b5pre) Gecko/2008032106 Minefield/3.0b5pre
Status: RESOLVED → VERIFIED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: