Bug 423960 ? regression: disabling history remembers visits (for mak77@supereva.it, r=dietrich)