toolkit/components/places/src/nsNavHistory.cpp
@@ -1786,7 +1786,8 @@ nsNavHistory::LoadPrefs(PRBool aInitializing)
   mPrefBranch->GetIntPref(PREF_BROWSER_HISTORY_EXPIRE_DAYS_MAX, &mExpireDaysMax);
   mPrefBranch->GetIntPref(PREF_BROWSER_HISTORY_EXPIRE_DAYS_MIN, &mExpireDaysMin);
   // Cap max days to min days to prevent expiring pages younger than min
-  if (mExpireDaysMax < mExpireDaysMin)
+  // NOTE: if history is disabled in preferences, then mExpireDaysMax == 0
+  if (mExpireDaysMax && mExpireDaysMax < mExpireDaysMin)
     mExpireDaysMax = mExpireDaysMin;
   if (NS_FAILED(mPrefBranch->GetIntPref(PREF_BROWSER_HISTORY_EXPIRE_SITES,
                                         &mExpireSites)))
